implemented hsm signing